# lm_sampling_analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: baseline_testing.ipynb  dataset_testing.ipynb  genai-proj-training.ipynb  preprocessor_testing.ipynb  sanity_testing.ipynb
scripts/: preprocess_data.py  run_evaluation.py  test_model.py  train_model.py  train_tokenizer.py
src/data/: dataset.py  loader.py  preprocessor.py  tokenizer.py
src/evaluation/: evaluator.py  metrics.py  run_evaluation.py
src/models/: gpt.py
src/sampling/: config.py  samplers.py
