[project]
name = "lm-sampling-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill Greshnov",email = "kirill.greschnow@gmail.com"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.4.0,<2.5.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "pandas (>=2.2.0,<2.3.0)",
    "tqdm (>=4.66.0,<5.0.0)",
    "datasets (>=2.18.0,<3.0.0)",
    "tokenizers (>=0.22.2,<0.23.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "nltk (>=3.8.1,<4.0.0)",
    "bleuscore (>=0.1.6,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.29.0,<7.0.0)",
    "matplotlib (>=3.8.0,<3.9.0)"
]
